dnl -*- sh -*-
dnl
dnl  Authors:
dnl    Michael Mehl (mehl@dfki.de)
dnl 
dnl  Contributors:
dnl    optional, Contributor's name (Contributor's email address)
dnl 
dnl  Copyright:
dnl    Michael Mehl (1997)
dnl 
dnl  Last change:
dnl    $Date$ by $Author$
dnl    $Revision$
dnl 
dnl  This file is part of Mozart, an implementation 
dnl  of Oz 3:
dnl     $MOZARTURL$
dnl 
dnl  See the file "LICENSE" or
dnl     $LICENSEURL$
dnl  for information on usage and redistribution 
dnl  of this file, and for a DISCLAIMER OF ALL 
dnl  WARRANTIES.
dnl

dnl Process this file with autoconf to produce a configure script.

dnl *****************************************************************
dnl INITIALIZE
dnl *****************************************************************

dnl This will check that we are in the Oz directory and initiate
AC_INIT(lib)

OZ_INIT

BUILDTOP=`cd .. && pwd`
AC_SUBST(BUILDTOP)

dnl *****************************************************************
dnl locations
dnl *****************************************************************

srcdira=`(cd $srcdir; pwd)`
AC_SUBST(srcdira)

dnl *****************************************************************
dnl Checks for programs.
dnl *****************************************************************

AC_PROG_INSTALL
AC_PROG_LN_S

AC_CHECK_PROGS(M4, gm4 m4, m4)
AC_CHECK_PROGS(PERL, perl, perl)
AC_CHECK_PROGS(THEEMACS, emacs xemacs, emacs)

OZ_PATH_PROG(OZPLATFORM, ozplatform)
OZ_PATH_PROG(OZC, ozc, OZC=`pwd`/lib/ozc)
OZ_PATH_PROG(OZENGINE, ozengine, OZENGINE=`pwd`/ozengine.sh)

AC_MSG_CHECKING(for --enable-fun)
AC_ARG_ENABLE(fun,
  [--enable-fun   build the functorial compiler (default=yes)])
if test "${enable_fun}" = no; then
    AC_MSG_RESULT(no)
    COMPILER_FUN=Compiler.fun
    COMPILER_BIG=Compiler.ozc
else
    AC_MSG_RESULT(yes)
    COMPILER_FUN=Compiler.ozc
    COMPILER_BIG=Compiler.big
fi
AC_SUBST(COMPILER_FUN)
AC_SUBST(COMPILER_BIG)

dnl *****************************************************************
dnl FINALIZE
dnl *****************************************************************

AC_OUTPUT(lib/Makefile tools/Makefile \
    demo/Makefile test/Makefile \
    examples/Makefile elisp/Makefile elisp/oz.el bin/Makefile Makefile)


errprint(ifdef([OZ_INIT],
 [],
 [autoconf failed: use 'autoconf -l ..' to include ../aclocal.m4.
]))
